--- a/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
+++ b/RigaDevDay/RigaDevDay/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cp2-fC-y6q">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="cp2-fC-y6q">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -997,6 +997,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Zqx-ZM-03J" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="wIH-tc-UiH"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="jO6-1e-oBb">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -1271,6 +1274,110 @@
             </objects>
             <point key="canvasLocation" x="1795" y="-1324"/>
         </scene>
+        <!--Organizers-->
+        <scene sceneID="RRk-yp-xFE">
+            <objects>
+                <viewController id="sSG-EA-mA9" customClass="OrganizersViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6g3-yz-cwv"/>
+                        <viewControllerLayoutGuide type="bottom" id="Anw-yU-Zvi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IS3-Nz-dYS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="YaZ-Sn-wBY">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="OrganizersCell" id="CzA-iN-Vng" customClass="OrganizersTableViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CzA-iN-Vng" id="4U2-U6-23G">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1BX-r8-M8p" userLabel="LogoImage">
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="69"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="69" id="4hU-lI-GaP"/>
+                                                        <constraint firstAttribute="width" constant="320" id="aZ7-0K-YwO"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="1BX-r8-M8p" secondAttribute="trailing" constant="-8" id="0RZ-s9-C70"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="1BX-r8-M8p" secondAttribute="bottom" constant="-8" id="ALl-V2-hXn"/>
+                                                <constraint firstItem="1BX-r8-M8p" firstAttribute="leading" secondItem="4U2-U6-23G" secondAttribute="leadingMargin" constant="-8" id="GY7-cO-zaB"/>
+                                                <constraint firstItem="1BX-r8-M8p" firstAttribute="top" secondItem="4U2-U6-23G" secondAttribute="topMargin" constant="-8" id="seh-AY-4Ig"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="logoImageView" destination="1BX-r8-M8p" id="Y5V-9U-xAg"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="sSG-EA-mA9" id="NIV-7c-eIn"/>
+                                    <outlet property="delegate" destination="sSG-EA-mA9" id="4tm-SY-Zhb"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Organizers" id="KhG-qi-5yL">
+                        <barButtonItem key="leftBarButtonItem" image="ic_drawer.png" id="KqK-Qe-5Qn">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="buttonMenu" destination="KqK-Qe-5Qn" id="ghI-NE-0XV"/>
+                        <outlet property="tableView" destination="YaZ-Sn-wBY" id="vu7-C6-7Ha"/>
+                        <segue destination="NBx-m8-knP" kind="push" identifier="WEB_VIEW_SEGUE" id="I4Z-YM-bBa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yHW-xX-JF4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2273" y="-677"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="Hw1-9Z-U7h">
+            <objects>
+                <viewController id="NBx-m8-knP" customClass="WebViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kr3-aY-xDX"/>
+                        <viewControllerLayoutGuide type="bottom" id="ff4-fu-oV9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IZX-7s-On0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lxd-Sc-QKF">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="NBx-m8-knP" id="XhZ-lc-BkY"/>
+                                </connections>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="I5f-BW-ZSW">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="7Pa-QZ-YO8">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="buttonMenu" destination="7Pa-QZ-YO8" id="Gzq-6K-489"/>
+                        <outlet property="webView" destination="Lxd-Sc-QKF" id="SxT-9X-sKY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bmi-Lu-hU2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2273" y="-12"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="2oJ-PE-TI7">
             <objects>
@@ -1290,6 +1397,25 @@
             </objects>
             <point key="canvasLocation" x="386" y="-1324"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="L1k-hb-G3Q">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Zqx-ZM-03J" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="lil-ZG-nCP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="sSG-EA-mA9" kind="relationship" relationship="rootViewController" id="kqF-lQ-VRN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ba4-U4-6Bw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2273" y="-1316"/>
+        </scene>
     </scenes>
     <resources>
         <image name="backstage_1.jpeg" width="470" height="328"/>
@@ -1307,6 +1433,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="qxn-fx-64F"/>
-        <segue reference="4Qg-H3-HSl"/>
+        <segue reference="07D-Rm-8ka"/>
     </inferredMetricsTieBreakers>
 </document>
